fix spacing for widgets on tablet/mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -13,8 +13,9 @@
             margin: 50px auto 0;
         }
         @media @tablet {
-            width: auto;
-            margin: 15px 30px 0;
+                width: 100%;
+                margin: 15px 0 0;
+                padding: 0 30px;
         }
     }
 }
